...
    <string name="lines_explorer_building_pgn_title">Building PGN</string>
    <string name="lines_explorer_building_pgn_message">Preparing lines PGN...</string>
    <string name="lines_explorer_deleting_lines_title">Deleting Lines</string>
    <string name="lines_explorer_deleting_lines_message">Removing lines from the explorer results...</string>
    <string name="lines_explorer_delete_line_title">Delete Line</string>
    <string name="lines_explorer_delete_line_message">Delete \"%1$s\"?\nLine ID: %2$d</string>
    <string name="lines_explorer_delete_lines_title">Delete Lines</string>
    <string name="lines_explorer_search_lines">Search lines</string>
    <string name="lines_explorer_clear_search">Clear lines search</string>
    <string name="lines_explorer_previous_page">Previous lines page</string>
    <string name="lines_explorer_next_page">Next lines page</string>
    <string name="lines_explorer_action_edit">Edit</string>
    <string name="lines_explorer_edit_line">Edit line</string>
...
